--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 * {
   box-sizing: border-box;
@@ -7,7 +8,8 @@
 }
 
 @theme {
-  --color-primary: #161d6f;
+  --color-primary: #2e56ad;
+  --color-primary-light: #4e81eefd;
   --color-light: #dee4ee;
   --color-boxdark: #24303f;
   --color-boxdark2: #1a222c;
