--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -20,7 +20,8 @@
   height: 100%;
   transform-style: preserve-3d;
   transform: rotateX(60deg) rotateZ(-135deg);
-  animation: cubes 8s cubic-bezier(0, 0, 1, 1) infinite;
+  animation: cubes 8s cubic-bezier(0, 0, 1, 1)
+    infinite;
 }
 
 /* The cube */
@@ -33,7 +34,8 @@
   opacity: 0;
   transform-style: preserve-3d;
   backface-visibility: hidden;
-  animation: cube 2s cubic-bezier(0.64, 0.21, 0.42, 0.85) infinite;
+  animation: cube 2s
+    cubic-bezier(0.64, 0.21, 0.42, 0.85) infinite;
 }
 
 @keyframes cube {
@@ -275,4 +277,58 @@
 
 .cube:nth-child(63) {
   animation-delay: 700ms;
+}
+
+/* From Uiverse.io by adamgiebl */
+.dots-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80px;
+  width: 100%;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin-right: 15px;
+  border-radius: 15px;
+  background-color: #b3d4fc;
+  animation: pulse 1.5s infinite ease-in-out;
+}
+
+.dot:last-child {
+  margin-right: 0;
+}
+
+.dot:nth-child(1) {
+  animation-delay: -0.3s;
+}
+
+.dot:nth-child(2) {
+  animation-delay: -0.1s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 0.1s;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.8);
+    background-color: #b3d4fc;
+    box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: #6793fb;
+    box-shadow: 0 0 0 10px rgba(178, 212, 252, 0);
+  }
+
+  100% {
+    transform: scale(0.8);
+    background-color: #b3d4fc;
+    box-shadow: 0 0 0 0 rgba(178, 212, 252, 0.7);
+  }
 }
